# Ironfang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  android-toolchain-arm64.cmake  board.cpp  board.h  mailbox.cpp  mailbox.h  main.cpp  move.h  perf.data  types.h
include/: Gamestate.h  bitboard.h  board.h  evaluate.h  magic.h  mailbox.h  move.h  perft.h  precomputedEvalTables.h  precomputedMagics.h  search.h  tt.h  types.h  zobrist.h
src/: bitboard.cpp  board.cpp  evaluate.cpp  magic.cpp  main.cpp  move.cpp  perft.cpp  precomputedEvalTables.cpp  precomputedMagics.cpp  search.cpp  tt.cpp  uci.cpp  zobrist.cpp
